// https://services.gradle.org/distributions - in gradle-wrapper.properties

plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.1'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.graalvm.buildtools.native' version '0.10.6'
}

group 'com.blck'
def applicationProperties = file('src/main/resources/application.properties')
def properties = new Properties()
applicationProperties.withInputStream { stream ->
    properties.load(stream)
}
version = properties.getProperty('app.version')

repositories {
    mavenCentral()
    gradlePluginPortal()
}

graalvmNative {
    binaries.configureEach {
        imageName.set("MusicReleaseTracker")
        buildArgs.add('--verbose')
        // https://graalvm.org/dev/reference-manual/native-image/optimizations-and-performance
        buildArgs.add('-O1')
//        buildArgs.add('-Ob')
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

dependencies {
    implementation 'org.xerial:sqlite-jdbc:3.51.1.0'
    implementation 'org.jsoup:jsoup:1.22.1'

    testImplementation(platform('org.junit:junit-bom:6.0.1'))
    testImplementation 'org.junit.jupiter:junit-jupiter-api'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine'

    testImplementation 'org.mockito:mockito-core:5.21.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.21.0'

    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

bootJar {
    duplicatesStrategy = 'exclude'
    archiveFileName = "MRT-${version}.jar"
}

sourceSets {
    main {
        resources {
            srcDirs = ['src/main/resources']
        }
    }
}

tasks.jar {
    manifest {
        attributes 'Main-Class': 'com.blck.MusicReleaseTracker.Main'
    }
    duplicatesStrategy = 'exclude'
    from(sourceSets.main.output) {
        exclude 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA'
    }
    dependsOn configurations.runtimeClasspath
}

test {
    useJUnitPlatform()
    jvmArgs("-XX:+EnableDynamicAgentLoading")
}

